--- a/package.json
+++ b/package.json
@@ -56,10 +56,16 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-unicorn": "29.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "semantic-release": "^17.4.3",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
