--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@alexbabel/semantic-release-docker": "^2.6.0",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
