--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/terminus": "^7.2.0",
     "cache-manager": "^3.4.3",
@@ -36,9 +37,12 @@
     "nest-winston": "^1.5.0",
     "node-localstorage": "^2.1.6",
     "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "showdown": "^1.9.1",
     "striptags": "^3.1.1",
     "winston": "^3.3.3"
   },
@@ -56,6 +60,8 @@
     "@types/matrix-js-sdk": "^11.0.0",
     "@types/node": "^14.14.36",
     "@types/node-localstorage": "^1.3.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/showdown": "^1.9.3",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
