--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "release": "semantic-release"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/axios": "^0.0.1",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.0.6",
     "@nestjs/terminus": "^7.2.0",
     "body-parser": "^1.19.0",
     "cache-manager": "^3.4.3",
@@ -34,7 +35,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "js-yaml": "^4.1.0",
-    "matrix-js-sdk": "^11.1.0",
+    "matrix-js-sdk": "^12.3.1",
     "nest-winston": "^1.5.0",
     "node-localstorage": "^2.1.6",
     "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
@@ -42,24 +43,24 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.3.0",
     "showdown": "^1.9.1",
     "striptags": "^3.1.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@alexbabel/semantic-release-docker": "^2.6.0",
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.6",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.1",
     "@types/matrix-js-sdk": "^11.0.0",
-    "@types/node": "^14.14.36",
+    "@types/node": "^16.6.2",
     "@types/node-localstorage": "^1.3.0",
     "@types/passport-local": "^1.0.33",
     "@types/showdown": "^1.9.3",
@@ -72,15 +73,15 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "4.3.1",
-    "eslint-plugin-unicorn": "29.0.0",
-    "jest": "^26.6.3",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-unicorn": "^35.0.0",
+    "jest": "^27.0.6",
     "prettier": "^2.2.1",
     "semantic-release": "^17.4.3",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
