--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         image: "ghcr.io/alexanderbabel/matrix-headless-client:latest"
         acs-report-enable: true
+        fail-build: false
     - name: Upload Anchore Scan Report
       uses: github/codeql-action/upload-sarif@v1
       with:
