--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.2.3",
     "@nestjs/terminus": "8.0.1",
+    "@peculiar/webcrypto": "^1.2.3",
+    "blurhash": "^1.1.4",
     "body-parser": "1.19.0",
     "cache-manager": "3.6.0",
     "class-transformer": "0.5.1",
@@ -44,6 +46,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
+    "sharp": "^0.29.3",
     "showdown": "1.9.1",
     "striptags": "3.2.0",
     "winston": "3.3.3"
@@ -62,6 +65,7 @@
     "@types/node": "16.11.11",
     "@types/node-localstorage": "1.3.0",
     "@types/passport-local": "1.0.34",
+    "@types/sharp": "^0.29.4",
     "@types/showdown": "1.9.4",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.5.0",
