--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/terminus": "8.1.1",
     "@peculiar/webcrypto": "1.4.0",
+    "axios": "^0.27.2",
     "blurhash": "1.1.5",
     "body-parser": "1.20.0",
     "cache-manager": "4.0.1",
